# pca-wine-quality

./: README.md  main.py  pyproject.toml  requirements.txt
notebooks/: pca_wine_quality.ipynb
src/: data_loader.py  eda.py  model.py  pca_scratch.py  pca_sklearn.py  preprocessing.py  visualization.py
